# vision

./: .gitignore  .gitmodules  README.md
SLAM/: CMakeLists.txt
SLAM/cmake/: FindLIBIGL.cmake
SLAM/src/: helpers.cpp  helpers.h  rigid_icp.cpp  timer.h  viewer_wrapper.cpp  viewer_wrapper.h
backpropogation/: backprop.py
blur_filters/: blur.py
char_rnn/: config.py  model.py  utils.py
digit_recognition/: classify.py  classify_keras.py  classify_slim.py  model_weights.h5
face_detector/: bounding_box_labeler.py  detect.py  labels.txt
generative_adversarial_network/: gans.py
gradient_descent/: linear_regression.py
interpretation_mask/: dataset.py  logger.py  model.py  parameters.py  test.py  train.py  train_classifier.py  utils.py
marching_squares/: marching_squares.in  marching_squares.py
misc/: example_multithread_generator.py  multithread_generator.py
neural_network/: backprop.py  iris_classification.py  neural_network_backpropogation.py
normal_estimation/: calculate_normals.m  covariance.m  demo.m  read_obj.m
object_detection/: .detect.py.swp  detect.py
realtime_style_transfer/: config.py  dataprovider.py  model.py  msgnet.py  ops.py  summary.py  train.py  vgg19.py
stereo_images/: disparity_map.py  out.ply  tmp.py
style_transfer/: style_transfer_keras.py
tool_benchmark/: resize.py
tools/: plot_tensorboard_json.py
variational_autoencoder/: encoder_decoder.py  util.py
visualizing_cnn/: resize.py  style_transfer_deep_dream.py
weight_regularization_kl/: dataset.py  logger.py  model.py  parameters.py  train.py
(+71 files in other folders)
